# cmake_minimum_required(VERSION <specify CMake version here>)
project(Programming621_C_)

set(CMAKE_CXX_STANDARD 11)

add_executable(Programming621_C_
        absFunc/main.cpp
        AbsoluteValue/main.cpp
        Age/main.cpp
        ConvertLength/main.cpp
        countBackFor/main.cpp
        Divisibility/main.cpp
        do...while/main.cpp
        findAVG/main.cpp
        firstProgram/firstProgram.cpp
        Flag-ControlledLoop/main.cpp
        floating-pointExpressions/floating-pointExpressions.cpp
        forLoop/main.cpp
        functionCourseGrade/main.cpp
        functionLarger/main.cpp
        GPA/main.cpp
        gradeMarks/main.cpp
        "input statements/inputStatements.cpp"
        "input statements/main.cpp"
        interestRate/main.cpp
        isPrime/main.cpp
        LogicalOperators/main.cpp
        MakeChange/main.cpp
        "mixed expressions/mixedExpressions.cpp"
        multiplicationTable/main.cpp
        nestedLoops/main.cpp
        outputStatements/main.cpp
        policyRate/main.cpp
        pre-incrementOperator/main.cpp
        precedingExpressions/precedingExpressions.cpp
        predefinedFunctions/main.cpp
        RandomNumber/main.cpp
        "read strings/main.cpp"
        score/main.cpp
        secretFunction/main.cpp
        SENTINEL/main.cpp
        TelephoneDigits/main.cpp
        Temp/main.cpp
        typeConversion/typeConversion.cpp
        variables/variables.cpp
        WeeklyWages/main.cpp
        whileExample/main.cpp)
